* changed the header font to Quicksand
* changed navbar hover color
* added org slider at the bottom
* changed navar buttons color

October 9, 2015
* fixed: hide search on small screens
* fixed: make the header texts adaptive to super small screens
* fixed: check border bottom/text for smaller screens

October 12, 2015
* added reminder in modal for large pages
* tried drop down login (failed, naka-comment)
* fixed: make sure that the header image is clickable
* redesigned footer
* fixed: automatic type on username field after opening the modal

October 13, 2015
* changed the localtion of the slick prev and next buttons
* justified some of the texts in the body

October 14, 2015
* fixed: countup in stats will start on "onscreen"
* documented app.css

October 16, 2015
* changed submit to log in
* fixed: set whole header chunk as link to home
* aligned all top-bar-menu of small screens on left
* put sample text on orbit
* removed 1 news on small screen
* removed reset on countUp
* UPLB OFFICE OF STUDENT AFFAIRS on footer
* put tab after icon on footer
* put an icon on text help
* lower opacity of social networking sites icons
* removed the word connect with us
* set box-height on OSAM Bulletin
* rearranged OSAM Bulletin content for slick arrow adjustment
* fixed: check responsiveness on even bigger screen (about 1300)
* fixed: mobile adaptive topbar (logo only on small screens)
* fixed: on small screen, put the logo at the top
* fixed: on small screen, put the logo at the center
* fixed: on some screen, make logo vertical
* made all links color maroon like in the present site

October 21, 2015
* modal now fixed at the center when revealed ***
* centered social networking sites on small screen's footer
* x-aria on big modals
* red link hover @ #500000
* fixed the unknown shadow on small screen's dropdown menu
* edited student.html for student's page
* added student log out
* added student name on small screen's dropdown menu