@@ -202,11 +202,11 @@
 
       <br class="show-for-small-only">
       <div class="slider single-item center-children medium-12 columns">
-        <div><img class="orbit-pic" src="img/orbit1.png"/><h2 class="slick-caption">97th Loyalty Day and Alumni Homecoming</h2></div>
-        <div><img class="orbit-pic" src="img/orbit2.png"/><h2 class="slick-caption">National Conference of Food &amp; Nutrition Security</h2></div>
-        <div><img class="orbit-pic" src="img/orbit3.png"/><h2 class="slick-caption">4th Humphrey Voices Series &amp; DDC-CDC Seminar</h2></div>
-        <div><img class="orbit-pic" src="img/orbit4.png"/><h2 class="slick-caption">105th UPLB-CFNR Founding Anniversary</h2></div>
-        <div><img class="orbit-pic" src="img/orbit5.jpg"/><h2 class="slick-caption">Congratulations!</h2></div>
+        <div><img class="orbit-pic" src="img/orbit1.png"/><h2>97th Loyalty Day and Alumni Homecoming</h2></div>
+        <div><img class="orbit-pic" src="img/orbit2.png"/><h2>National Conference of Food &amp; Nutrition Security</h2></div>
+        <div><img class="orbit-pic" src="img/orbit3.png"/><h2>4th Humphrey Voices Series &amp; DDC-CDC Seminar</h2></div>
+        <div><img class="orbit-pic" src="img/orbit4.png"/><h2>105th UPLB-CFNR Founding Anniversary</h2></div>
+        <div><img class="orbit-pic" src="img/orbit5.jpg"/><h2>Congratulations!</h2></div>
       </div>
 
       <!--WHAT'S UP SECTION-->
