@@ -52,7 +52,7 @@
           <div class="below-header">
             <nav class="top-bar sticky" data-topbar role="navigation">
               <ul class="title-area">
-                <li class="name show-for-small-only">STUDENT NAME</li>
+                <li class="name show-for-small-only" style="padding-top:2%;padding-bottom:2%;padding-left:2%;">STUDENT NAME</li>
                 <li class="toggle-topbar menu-icon left"><a href="#"><span></span></a></li>
               </ul>
 
